--- a/app/views/reports/desks.html.erb
+++ b/app/views/reports/desks.html.erb
@@ -1,3 +1,34 @@
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart);
+
+  function drawChart() {
+    var dataArray = [
+      ['Month', 'Count', 'Paid Count'],
+    <% @ordered_months.each do |month| %>
+      <%= raw [ month, @counts[month], @paid_counts[month] ].to_json %>,
+    <% end %>
+    ];
+    var data = google.visualization.arrayToDataTable(dataArray);
+
+    var options = {
+      title: <%= raw request.params["title"].to_json %>,
+      legend: { position: 'bottom' }
+    };
+
+    var chart = new google.visualization.LineChart(document.getElementById('chart'));
+    google.visualization.events.addListener(chart, 'ready', function () {
+      var link = document.getElementById('chart_link')
+      link.href = chart.getImageURI()
+      link.style.visibility = "visible"
+    });
+
+    chart.draw(data, options);
+  }
+</script>
+<div id="chart" style="width: 900px; height: 500px"></div>
+<a id="chart_link" style="visibility: hidden;" href="">Download Chart</a>
 <table>
   <% @ordered_months.each do |month| %>
   <% count = @counts[month] %>
