--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FinancialReport</title>
+    <title>FinancialReport<% if @title %> - <%=@title%><% end %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <ul>
+      <li><%= link_to "Categories", { controller: "reports", action: "categories" } %>
+      <li><%= link_to "Income Distribution", { controller: "reports", action: "income_distribution" } %>
+      <li><%= link_to "Service Users", { controller: "reports", action: "service_users" } %>
+    </ul>
     <%= yield %>
   </body>
 </html>
