--- a/app/views/reports/service_users.html.erb
+++ b/app/views/reports/service_users.html.erb
@@ -18,7 +18,7 @@
 <%= submit_tag "Show" %>
 <% end %>
 
-<h2>Service Users <%=Date.today%></h2>
+<h2>Service Users <%=Date.today%> (<%=@invoices.length%>)</h2>
 <ul>
 <% @categories.each do |cat_id| %>
   <li><%= ProductCategory.find(cat_id).name %></li>
