--- a/app/views/reports/income_distribution.html.erb
+++ b/app/views/reports/income_distribution.html.erb
@@ -1,4 +1,9 @@
 <%= form_tag("", method: "get") do %>
+<div>
+<%= label_tag :bank_account, "Bank account:" %>
+<%= select_tag :bank_account, options_for_select( @bank_accounts, params[:bank_account] ) %>
+</div>
+<div>
 <%= label_tag :start_date, "Start date:" %>
 <%= text_field_tag :start_date, @start_date, size:12 %>
 <%= label_tag :end_date, "End date:" %>
@@ -8,12 +13,11 @@
 <%= label_tag :exclusions, "Exclude categories:" %>
 <%= select_tag :exclusions, options_for_select( ProductCategory.all.map { |c| c.name }, params[:exclusions]), {multiple: true, size: 5} %>
 <%= submit_tag "Show" %>
+</div>
+<%= submit_tag "All Time", name: "all_time" %>
 <% end %>
-<%= form_tag("", method: "get") do %>
-<%= hidden_field_tag :start_date, "" %>
-<%= hidden_field_tag :end_date,"" %>
-<%= submit_tag "All Time" %>
-<% end %>
+
+<% if params[:bank_account] %>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
@@ -75,3 +79,5 @@
 <a id="totals_chart_link" style="visibility: hidden;" href="">Download Chart</a>
 <div id="bar_chart" style="width: 900px; height: 500px"></div>
 <a id="bar_chart_link" style="visibility: hidden;" href="">Download Chart</a>
+
+<% end %>
